# houtamelo_utils_gdext

./: .gitignore  Cargo.toml
src/: auto_text_resize.rs  connect_child.rs  connect_deferred.rs  connect_with_deferred.rs  disallow_click_focus.rs  enums.rs  inherits.rs  lazy_string.rs  lib.rs  loading.rs  log_if_err.rs  macro_match.rs  modulate_on_hover.rs  node_extensions.rs  required_gd.rs  try_var_at.rs  variant_result_conversions.rs
src/audio/: pitch_randomizer.rs  play_on_click.rs  play_on_hover.rs
src/connect/: connect_child.rs  connect_deferred.rs  connect_with_deferred.rs  mod.rs
