[package]
name = "houtamelo_utils_gdext"
version = "0.1.7"
authors = ["Houtamelo"]
edition = "2021"
description = "A collection of utilities shared between Houtamelo's GDExtension projects."
license = "MIT"
repository = "https://github.com/Houtamelo/houtamelo_utils_gdext"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
godot = "0.1"
rand = "0.8"
rand_xoshiro = "0.6"
anyhow = "1.0"