[package]
name = "houtamelo_utils_gdext"
version = "0.3.1"
authors = ["Houtamelo"]
edition = "2021"
description = "A collection of utilities shared between Houtamelo's GDExtension projects."
license = "MIT"
repository = "https://github.com/Houtamelo/houtamelo_utils_gdext"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
godot = { version = "0.2", features = ["experimental-threads"] }
rand = "0.8"
rand_xoshiro = "0.6"
anyhow = "1.0"